Lesson 13 - Coroutine Flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="home_header_good_morning">Good Morning,</string>
     <string name="home_search_placeholder">Search products</string>
 
+    <string name="search_title">Search</string>
+
     <string name="action_see_all">See all</string>
 
     <string name="store_details_rating_fmt">%1$s (%2$s Reviews)</string>
