Lesson 16 - Result API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="size_field_placeholder">Size</string>
 
     <string name="advertisement_title">Nike 50% Off</string>
+
+    <string name="choose_from_camera">Camera</string>
+    <string name="choose_from_gallery">Gallery</string>
+    <string name="submit">Submit</string>
 </resources>
